Corrigindo vulnerabilidades